cluster/homelab/apps/vikunja/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vikunja
    namespace: vikunja
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Tasks
        gethomepage.dev/group: Knowledge Base And Tasks
        gethomepage.dev/icon: vikunja
        gethomepage.dev/name: Vikunja
